Default to empty placeholder

--- a/addon/templates/components/x-select.hbs
+++ b/addon/templates/components/x-select.hbs
@@ -12,7 +12,7 @@
 
     <input type="text"
       autofocus={{autofocus}}
-      placeholder={{unless hasValues placeholder}}
+      placeholder={{unless hasValues placeholder ''}}
       readonly={{unless canSearch 'readonly'}}
 
       oninput={{action 'change' value='target.value'}}
