Do not filter options initially

--- a/addon/templates/components/x-select.hbs
+++ b/addon/templates/components/x-select.hbs
@@ -39,7 +39,7 @@
     {{component dropdown
       model=model token=token values=values
       labelKey=labelKey valueKey=valueKey
-      freeText=freeText
+      freeText=freeText shouldFilter=shouldFilter
       select=(action 'select')}}
   </div>
 {{/if}}
