Close the dropdown on blur when opened from the dropdown icon

--- a/addon/templates/components/x-select.hbs
+++ b/addon/templates/components/x-select.hbs
@@ -28,7 +28,7 @@
   {{/if}}
 
   {{#if hasDropdown}}
-    <span class="es-arrow-zone" {{action 'dropdown'}}>
+    <span class="es-arrow-zone" {{action 'dropdown' on='mouseDown'}}>
       <span class="es-arrow"></span>
     </span>
   {{/if}}
