Disable browser `autocomplete`

--- a/addon/templates/components/x-select.hbs
+++ b/addon/templates/components/x-select.hbs
@@ -11,6 +11,7 @@
     {{/if}}
 
     <input type="text"
+      autocomplete="off"
       autofocus={{autofocus}}
       placeholder={{unless hasValues placeholder ''}}
       readonly={{unless canSearch 'readonly'}}
