--- a/addon/templates/components/select-dropdown.hbs
+++ b/addon/templates/components/select-dropdown.hbs
@@ -1,6 +1,6 @@
 {{#each options as |option|}}
   {{#if option.isVisible}}
     {{select-dropdown-option model=option
-      select=(action 'select') hover=(action 'hover')}}
+      select=(action "select") hover=(action "hover")}}
   {{/if}}
 {{/each}}
