--- a/addon/templates/components/x-select.hbs
+++ b/addon/templates/components/x-select.hbs
@@ -1,46 +1,53 @@
 <div class="es-control" {{action "focus" on="mouseDown"}}>
   <div class="es-input">
-    {{#if hasValues}}
+    {{#if this.hasValues}}
       <span class="es-selections">
-        {{#each values as |option|}}
+        {{#each @values as |option|}}
           <span {{action "remove" option}}>
-            {{if (get option labelKey) (get option labelKey) option}} ×
+            {{if (get option this.labelKey) (get option this.labelKey) option}} ×
           </span>
         {{/each}}
       </span>
     {{/if}}
 
-    <input type="text"
+    <input
+      type="text"
       autocomplete="off"
-      autofocus={{autofocus}}
-      placeholder={{unless hasValues placeholder ""}}
-      readonly={{unless canSearch "readonly"}}
-
+      autofocus={{this.autofocus}}
+      placeholder={{unless this.hasValues this.placeholder ""}}
+      readonly={{unless this.canSearch "readonly"}}
       oninput={{action "change" value="target.value"}}
       onkeydown={{action "keypress"}}
       onfocus={{action "focus"}}
-      onblur={{action "blur"}}>
+      onblur={{action "blur"}}
+    >
   </div>
 
-  {{#if canClear}}
+  {{#if this.canClear}}
     <span class="es-clear-zone" title="Clear" aria-label="Clear" {{action "clear"}}>
       <span class="es-clear">×</span>
     </span>
   {{/if}}
 
-  {{#if hasDropdown}}
+  {{#if this.hasDropdown}}
     <span class="es-arrow-zone" {{action "dropdown" on="mouseDown" bubbles=false}}>
       <span class="es-arrow"></span>
     </span>
   {{/if}}
 </div>
 
-{{#if isOpen}}
+{{#if this.isOpen}}
   <div class="es-options">
-    {{component dropdown parent=this
-      model=model token=token values=values
-      labelKey=labelKey valueKey=valueKey
-      freeText=freeText shouldFilter=shouldFilter
-      select=(action "select")}}
+    {{component dropdown
+      parent=this
+      model=@model
+      token=this.token
+      values=@values
+      labelKey=this.labelKey
+      valueKey=this.valueKey
+      freeText=this.freeText
+      shouldFilter=this.shouldFilter
+      select=(action "select")
+    }}
   </div>
 {{/if}}
