Use this for dropdown type

--- a/addon/templates/components/x-select.hbs
+++ b/addon/templates/components/x-select.hbs
@@ -38,7 +38,7 @@
 
 {{#if this.isOpen}}
   <div class="es-options">
-    {{component dropdown
+    {{component this.dropdown
       parent=this
       model=@model
       token=this.token
