Ember 6 Compat: Remove "action", Change to Class Style

--- a/addon/templates/components/select-dropdown-group.hbs
+++ b/addon/templates/components/select-dropdown-group.hbs
@@ -3,11 +3,11 @@
     <div class="es-group">{{group.name}}</div>
     {{#each group.children as |option|}}
       {{#if option.isVisible}}
-        {{select-dropdown-option
+        <SelectDropdownOption
           model=option
-          select=(action "select")
-          hover=(action "hover")
-        }}
+          select={{@select}}
+          hover={{@hover}}
+        />
       {{/if}}
     {{/each}}
   {{/if}}
