--- a/addon/templates/components/select-dropdown-group.hbs
+++ b/addon/templates/components/select-dropdown-group.hbs
@@ -1,14 +1,16 @@
 {{#each this.options as |group|}}
   {{#if group.isVisible}}
-    <div class="es-group">{{group.name}}</div>
-    {{#each group.children as |option|}}
-      {{#if option.isVisible}}
-        {{select-dropdown-option
-          model=option
-          select=(action "select")
-          hover=(action "hover")
-        }}
-      {{/if}}
-    {{/each}}
+    <span class="es-groups">
+      <div class="es-group">{{group.name}}</div>
+      {{#each group.children as |option|}}
+        {{#if option.isVisible}}
+          {{select-dropdown-option
+            model=option
+            select=(action "select")
+            hover=(action "hover")
+          }}
+        {{/if}}
+      {{/each}}
+    </span>
   {{/if}}
 {{/each}}
