--- a/addon/templates/components/x-select.hbs
+++ b/addon/templates/components/x-select.hbs
@@ -47,7 +47,7 @@
       valueKey=this.valueKey
       freeText=this.freeText
       shouldFilter=this.shouldFilter
-      select=(action "select")
+      onSelect=(action "select")
     }}
   </div>
 {{/if}}
