--- a/addon/templates/components/select-dropdown-group.hbs
+++ b/addon/templates/components/select-dropdown-group.hbs
@@ -4,11 +4,11 @@
       <div class="es-group">{{group.name}}</div>
       {{#each group.children as |option|}}
         {{#if option.isVisible}}
-          {{select-dropdown-option
-            model=option
-            select=(action "select")
-            hover=(action "hover")
-          }}
+          <SelectDropdownOption
+            @model={{option}}
+            {{on "click" (fn this.select option)}}
+            {{on "mouseenter" (fn this.hover option)}}
+          />
         {{/if}}
       {{/each}}
     </span>
