Add test for onInput event when typing

--- a/addon/components/x-select.hbs
+++ b/addon/components/x-select.hbs
@@ -19,7 +19,8 @@
       type="text"
       onblur={{this.blur}}
       onfocus={{this.focus}}
-      onkeydown={{this.keypress}}
+      oninput={{this.changeInput}}
+      onkeyup={{this.keypress}}
     >
   </div>
 
