Do not use Evented Do not leak parent component in the child component

--- a/addon/components/x-select.hbs
+++ b/addon/components/x-select.hbs
@@ -40,7 +40,6 @@
 {{#if this.isOpen}}
   <div class="es-options">
     <this.dropdown
-      @parent={{this}}
       @model={{@model}}
       @token={{this.token}}
       @values={{@values}}
@@ -49,6 +48,7 @@
       @freeText={{this.freeText}}
       @shouldFilter={{this.shouldFilter}}
       @onSelect={{this.select}}
+      @updateDropdownKeypressHandler={{this.updateDropdownKeypressHandler}}
     />
   </div>
 {{/if}}
