Update to Glimmer components

--- a/ember-select/src/components/select-dropdown.hbs
+++ b/ember-select/src/components/select-dropdown.hbs
@@ -3,6 +3,7 @@
     <SelectDropdownOption
       @model={{option}}
       {{on "click" (fn this.select option)}}
+      {{on "mousedown" this.mouseDown}}
       {{on "mouseenter" (fn this.hover option)}}
     />
   {{/if}}
