--- a/ember-select/src/css/x-select.css
+++ b/ember-select/src/css/x-select.css
@@ -24,16 +24,20 @@
   box-shadow: 0 1px 0 rgb(0 0 0 / 6%);
 }
 
+/* Disabled (readonly) */
+.es-disabled .es-control,
+.es-disabled .es-control input {
+  background-color: #f5f5f5;
+  color: #555;
+  cursor: not-allowed;
+}
+
 .es-input > input {
   border: 0 none;
   font-family: inherit;
   font-size: inherit;
   outline: none;
   width: 100%;
-}
-
-.es-select input {
-  cursor: pointer;
 }
 
 .es-multiple .es-control {
@@ -58,11 +62,7 @@
     0 0 5px -1px rgb(0 136 204 / 50%);
 }
 
-.es-selections {
-  margin-right: 1rem;
-}
-
-.es-selections span {
+.es-selections > span {
   border: 1px solid #ccc;
   border-radius: 4px;
   cursor: pointer;
@@ -71,7 +71,7 @@
   padding: 0 6px;
 }
 
-.es-selections span:hover {
+.es-selections > span:hover {
   background-color: #e6e6e6;
   border-color: #adadad;
 }
@@ -81,7 +81,7 @@
 }
 
 .es-select,
-.es-select .es-control .es-input > input {
+.es-select input {
   cursor: pointer;
 }
 
