--- a/ember-select/src/components/select-dropdown-group.hbs
+++ b/ember-select/src/components/select-dropdown-group.hbs
@@ -7,6 +7,7 @@
           <SelectDropdownOption
             @model={{option}}
             {{on "click" (fn this.select option)}}
+            {{on "mousedown" this.mouseDown}}
             {{on "mouseenter" (fn this.hover option)}}
           />
         {{/if}}
